--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Happy Birthday</string>
-    <string name="happy_birthday_text">Happy Birthday Iqbal!</string>
-    <string name="signature_text">From Bilal</string>
+    <string name="happy_birthday_text">Happy Birthday Bilal!</string>
+    <string name="signature_text">From Iqbal</string>
 </resources>
